--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,58 @@
 
+name: Build and Deploy
+
+on:
+  push:
+    branches:
+      - master  # Trigger the workflow on pushing to the master branch
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout the code from the repository
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Set up Java (for Maven) to build the Spring Boot backend
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+
+      # Build the backend using Maven
+      - name: Build Backend
+        run: |
+          cd Backend  # Navigate to the Backend directory
+          ./mvnw clean install  # Use Maven Wrapper or you can use 'mvn clean install' if Maven is installed globally
+
+      # Set up Node.js (for React frontend)
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'  # Specify the Node.js version (adjust based on your requirements)
+
+      # Install dependencies and build the frontend
+      - name: Build Frontend
+        run: |
+          cd Frontend  # Navigate to the Frontend directory
+          npm install  # Install frontend dependencies
+          npm run build  # Build the frontend (creates the 'build' folder with static files)
+
+      # Deploy Backend to Railway (adjust this step for your actual deployment provider)
+      - name: Install Railway CLI
+        run: |
+          curl -sSL https://railway.app/cli.sh | sh  # Install Railway CLI
+          railway login --token ${{ secrets.RAILWAY_TOKEN }}  # Log into Railway using the token secret
+
+      - name: Deploy Backend to Railway
+        run: |
+          cd Backend  # Go to the Backend directory
+          railway up  # Deploy the backend
+
+      # Deploy Frontend to Railway or another provider
+      - name: Deploy Frontend
+        run: |
+          cd Frontend  # Go to the Frontend directory
+          railway up  # Deploy the frontend (if you're deploying it to Railway as well)
