--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v2
 
       # Set up Java (for Maven) to build the Spring Boot backend
-      - name: Set up JDK 11
+      - name: Set up JDK 18
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '18'
 
       # Build the backend using Maven
       - name: Build Backend
@@ -31,8 +31,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'  # Specify the Node.js version (adjust based on your requirements)
-
+          node-version: '20'  
+          
       # Install dependencies and build the frontend
       - name: Build Frontend
         run: |
