--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v3
         
       # Set up Java for Maven to build the Spring Boot backend
-      - name: Set up Java 18
-        uses: actions/setup-java@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: 18
+          java-version: 21
           distribution: 'temurin'
           cache: 'maven'  # Cache Maven packages for faster builds
           
