--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,9 +6,11 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "html2canvas": "^1.4.1",
+    "icons": "^1.0.0",
     "lucide-react": "^0.511.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
