--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://localhost:8093
+REACT_APP_API_URL=https://bakerybeyondeggs.in/api
+# REACT_APP_API_URL=http://localhost:8093
